[project]
name = "latte_workspace"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sophia268238", email = "sophia268238@gmail.com"},
]
dependencies = [
    "tessLATTE>=1.0.21",
    "scikit-learn>=1.0.2",
]
requires-python = "==3.7.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
